infra/auth-d.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-d
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: samoz93/auth
---
apiVersion: v1
kind: Service
metadata:
  name: auth-s
spec:
  selector:
    app: auth
  ports:
    - protocol: TCP
      port: 3010
      name: auth
      targetPort: 3010
