infra/client-d.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-d
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: samoz93/client

---
apiVersion: v1
kind: Service
metadata:
  name: client-s
spec:
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 3001
      name: auth
      targetPort: 3001
