infra/tickets.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-d
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets
  template:
    metadata:
      labels:
        app: tickets
    spec:
      containers:
        - name: tickets
          image: samoz93/tickets
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-s
spec:
  selector:
    app: tickets
  ports:
    - protocol: TCP
      port: 3012
      name: tickets
      targetPort: 3012
